# pyplotutil

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  example.py  make_data.py
examples/data/: model_010.csv  model_015.csv  model_020.csv  model_030.csv  model_050.csv  model_100.csv
examples/tagged_data/: models.csv
pyplotutil/: datautil.py
src/pyplotutil/: _typing.py  datautil.py  loggingutil.py  plotutil.py
tests/: __init__.py  test_datautil.py  test_loggingutil.py  test_plotutil.py  test_pyplotutil.py
tests/data/: data1.csv  data2.csv  data3.csv  test.csv  test_comment_header.csv  test_comment_partial_data.csv  test_spaces.txt  test_tagged_data.csv  test_tagged_data_label.csv
