[tool.poetry]
name = "pyplotutil"
version = "0.1.0"
description = "Python utilities for academic plotting"
authors = ["Hiroshi Atsuta <atsuta.hiroshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.21.1"
matplotlib = "^3.5.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
